[package]
name = "lnurl-cli"
version = "0.1.0"
edition = "2021"
authors = ["benny blader <ben@bitcoinbay.live"]
description = "CLI tool kit for LNURL"
license = "MIT"
homepage = "https://rollerhodl.me"
repository = "https://github.com/bennyhodl/lnurl-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.29.2", features = ["rand"] }
clap = { version = "4.4.7", features = ["derive"] }
lnurl-rs = "0.3.0"
